# Damn-Vulnerable-DeFi-V3-CTF

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
contracts/: DamnValuableNFT.sol  DamnValuableToken.sol  DamnValuableTokenSnapshot.sol  ERC1967Proxy.sol  Encoder.vy  WETH9.sol
contracts/abi-smuggling/: AuthorizedExecutor.sol  SelfAuthorizedVault.sol
contracts/backdoor/: WalletRegistry.sol
contracts/build-uniswap-v1/: UniswapExchangeV1.json  UniswapFactoryV1.json
contracts/climber/: ClimberTimelock.sol  ClimberTimelockBase.sol  ClimberVault.sol
contracts/compromised/: Exchange.sol  TrustfulOracle.sol
contracts/exploits/: BackdoorAttacker.vy  ClimberAttacker.vy  FreeRiderAttacker.vy  NaiveReceiverAttacker.vy  PuppetAttacker.vy  PuppetV2Attacker.vy  PuppetV3Attacker.vy  SelfieAttacker.vy  SideEntranceAttacker.vy  TheRewarderAttacker.vy  TrusterAttacker.vy  UnstoppableAttacker.vy
contracts/free-rider/: FreeRiderNFTMarketplace.sol  FreeRiderRecovery.sol
contracts/gnosis/: GnosisSafe.sol  GnosisSafeProxyFactory.sol
contracts/naive-receiver/: FlashLoanReceiver.sol  NaiveReceiverLenderPool.sol
contracts/puppet/: PuppetPool.sol
contracts/puppet-v2/: PuppetV2Pool.sol
contracts/puppet-v3/: PuppetV3Pool.sol
contracts/selfie/: SelfiePool.sol
contracts/side-entrance/: SideEntranceLenderPool.sol
scripts/: abi_smuggling.py  backdoor.py  climber.py  compromised.py  free_rider.py  naive_receiver.py  puppet.py  puppet_v2.py  puppet_v3.py  selfie.py  side_entrance.py  the_rewarder.py  truster.py  unstoppable.py  wallet_mining.py
(+70 files in other folders)
